--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@currency-one/validators",
   "version": "1.0.10",
-  "description": "Typescript package of validators and patterns",
+  "description": "Typescript collection of validators and regexp patterns",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
