--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "@currency-one/validators",
   "version": "1.0.16",
   "description": "Typescript collection of validators and regexp patterns",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "./index.js",
+  "types": "./index.d.ts",
   "scripts": {
     "all": "npm install && npm run lint && npm run test && npm run build && npm run build:doc",
     "build": "npm run clean && npm run tsc",
     "tsc": "tsc",
     "lint": "tslint -p . -t codeFrame",
     "test": "jest --coverage",
-    "clean": "rimraf ./dist",
+    "clean": "rimraf ./helpers ./date-validators ./main ./pesel-validators ./phone-validators ./index.*",
     "fix": "npm run lint --fix",
     "publish-package": "npm run all && npm version patch && npm publish --access public",
     "build:doc": "jsdoc2md --files ./lib/**/*.ts --configure ./jsdoc2md.json > ./DOCS.md"
@@ -62,6 +62,18 @@
     "lib": "lib",
     "test": "test"
   },
+  "files": [
+    "date-validators",
+    "pesel-validators",
+    "phone-validators",
+    "main",
+    "helpers",
+    "README.md",
+    "DOCS.md",
+    "tsconfig.json",
+    "LICENSE.txt",
+    "package.json"
+  ],
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "jsdom",
