Remove core-js and polyfills

--- a/.babelrc
+++ b/.babelrc
@@ -10,9 +10,7 @@
           "safari": "11.1",
           "ie": "10"
         },
-        "useBuiltIns": "usage",
-        "modules": "cjs",
-        "corejs": 3
+        "modules": "cjs"
       }
     ]
   ]
